# PyA2lModel

./: README.md  a2l_parser.py  pyproject.toml
.github/workflows/: python-app.yml
