[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyA2lModel"
version = "0.0.1"
authors = [
    {name = "Sgnes", email = "sgnes0514@gmail.com"}
]
description = "Parse and model ASAP2 A2L files with bidirectional conversion"
readme = "README.md"
license = "MIT"
keywords = ["asap2", "a2l", "parser", "automotive", "ecul", "xcp", "calibration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/sgnes/PyA2lModel"
"Bug Reports" = "https://github.com/sgnes/PyA2lModel/issues"
"Source" = "https://github.com/sgnes/PyA2lModel"



[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=a2lmodel --cov-report=html --cov-report=term-missing"